[package]
name = "product_index"
version = "0.1.0"
edition = "2021"
description = "Convert a cartesian product index into the N indicies of the original arrays"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
itertools = "0.11.0"
thiserror = "1.0.50"
